--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -1,3 +1,4 @@
+<!DOCTYPE html>
 <html lang="en" class="weava-extension-context" data-weava-installed="1"><head><style type="text/css">:root, :host {
     --fa-font-solid: normal 900 1em/1 "Font Awesome 6 Solid";
     --fa-font-regular: normal 400 1em/1 "Font Awesome 6 Regular";
