--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -747,6 +747,10 @@
     fill: black;
   }
   
+  html, body {
+     min-height: 100%;
+  }
+
   .fad.fa-inverse,
   .fa-duotone.fa-inverse {
     color: var(--fa-inverse, #fff);
