--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -1,6 +1,5 @@
 <!DOCTYPE html>
 <html lang="en" class="weava-extension-context" data-weava-installed="1">
-    {% include head.html %}
 <head>
     <style type="text/css">
         :root,
@@ -2551,7 +2550,7 @@
     </style>
 </head>
 
-<!-- <body class="page page-theme-single-demo" data-new-gr-c-s-check-loaded="14.1098.0" data-gr-ext-installed=""
+<body class="page page-theme-single-demo" data-new-gr-c-s-check-loaded="14.1098.0" data-gr-ext-installed=""
     data-new-gr-c-s-loaded="14.1098.0">
 
     <iframe class="iframe-preview" style="position: absolute; height: 100%; width: 100%; border: none"
@@ -2559,59 +2558,6 @@
     <script type="text/javascript"
         src="/js/scriptsBundle.min.53ace3ee82e76d0f11f34fecc663b83d8a8f6094ed5b8aec5ff1741cd76072dd.js"></script>
     <app-weava-root id="weava-root" class="weava" ng-version="12.2.16"></app-weava-root>
-</body><grammarly-desktop-integration data-grammarly-shadow-root="true"></grammarly-desktop-integration> -->
-
-
-<body>
-
-
-    {% include header.html %}
-
-
-    <!-- Banner -->
-    <section id="banner" class="major">
-        <div class="inner">
-            <header class="major">
-                <h1>{{ page.landing-title }}</h1>
-            </header>
-            <div class="content">
-                <p style="text-transform: uppercase;">{{ site.description }}</p>
-                <ul class="actions">
-                    <li><a href="#one" class="button next scrolly">Get Started</a></li>
-                </ul>
-            </div>
-        </div>
-    </section>
-
-
-    <!-- Main -->
-    <div id="main">
-
-
-        <!-- One -->
-        {% include tiles.html %}
-
-
-        <!-- Two -->
-        <section id="two">
-            <div class="inner">
-                <header class="major">
-                    <h2>Massa libero</h2>
-                </header>
-                <p>{{ content }}</p>
-                <ul class="actions">
-                    <li><a href="landing.html" class="button next">Get Started</a></li>
-                </ul>
-            </div>
-        </section>
-
-
-    </div>
-
-
-    {% include footer.html %}
-
-
-</body>
+</body><grammarly-desktop-integration data-grammarly-shadow-root="true"></grammarly-desktop-integration>
 
 </html>
