--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -2549,6 +2549,14 @@
             overflow: hidden
         }
     </style>
+
+    <title>Home | Forty</title>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no">
+    <!--[if lte IE 8]><script src="/forty-jekyll-theme/assets/js/ie/html5shiv.js"></script><![endif]-->
+    <link rel="stylesheet" href="/forty-jekyll-theme/assets/css/main.css">
+    <!--[if lte IE 9]><link rel="stylesheet" href="/forty-jekyll-theme/assets/css/ie9.css" /><![endif]-->
+    <!--[if lte IE 8]><link rel="stylesheet" href="/forty-jekyll-theme/assets/css/ie8.css" /><![endif]-->
 </head>
 
 <!-- <body class="page page-theme-single-demo" data-new-gr-c-s-check-loaded="14.1098.0" data-gr-ext-installed=""
@@ -2561,18 +2569,8 @@
     <app-weava-root id="weava-root" class="weava" ng-version="12.2.16"></app-weava-root>
 </body><grammarly-desktop-integration data-grammarly-shadow-root="true"></grammarly-desktop-integration> -->
 
-<head>
-    <title>Home | Forty</title>
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no">
-    <!--[if lte IE 8]><script src="/forty-jekyll-theme/assets/js/ie/html5shiv.js"></script><![endif]-->
-    <link rel="stylesheet" href="/forty-jekyll-theme/assets/css/main.css">
-    <!--[if lte IE 9]><link rel="stylesheet" href="/forty-jekyll-theme/assets/css/ie9.css" /><![endif]-->
-    <!--[if lte IE 8]><link rel="stylesheet" href="/forty-jekyll-theme/assets/css/ie8.css" /><![endif]-->
-</head>
-
-
-<body class="" data-new-gr-c-s-check-loaded="14.1098.0" data-gr-ext-installed="">
+<body class="page page-theme-single-demo" data-new-gr-c-s-check-loaded="14.1098.0" data-gr-ext-installed=""
+    data-new-gr-c-s-check-loaded="14.1098.0" data-gr-ext-installed="">
 
     <!-- Wrapper -->
     <div id="wrapper">
