--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -2575,33 +2575,51 @@
     <!-- Wrapper -->
     <div id="wrapper">
 
-        <!-- Header -->
-        <header id="header" class="reveal alt">
-            <a href="/forty-jekyll-theme/" class="logo"><strong>Forty</strong> <span>by HTML5 UP</span></a>
-            <nav>
-                <a href="#menu">Menu</a>
-            </nav>
-        </header>
-
-        <!-- Menu -->
-
+        {% include header.html %}
 
 
         <!-- Banner -->
-        <section id="banner" class="major" style="background-position: center 0px;">
+        <section id="banner" class="major">
             <div class="inner">
                 <header class="major">
-                    <h1>Hi, my name is Forty</h1>
+                    <h1>{{ page.landing-title }}</h1>
                 </header>
                 <div class="content">
-                    <p style="text-transform: uppercase;">A responsive site template designed by HTML5 Up<br> and
-                        released under the Creative Commons.</p>
+                    <p style="text-transform: uppercase;">{{ site.description }}</p>
                     <ul class="actions">
                         <li><a href="#one" class="button next scrolly">Get Started</a></li>
                     </ul>
                 </div>
             </div>
         </section>
+
+
+        <!-- Main -->
+        <div id="main">
+
+
+            <!-- One -->
+            {% include tiles.html %}
+
+
+            <!-- Two -->
+            <section id="two">
+                <div class="inner">
+                    <header class="major">
+                        <h2>Massa libero</h2>
+                    </header>
+                    <p>{{ content }}</p>
+                    <ul class="actions">
+                        <li><a href="landing.html" class="button next">Get Started</a></li>
+                    </ul>
+                </div>
+            </section>
+
+
+        </div>
+
+
+        {% include footer.html %}
 
         <!-- Main -->
         <div id="main">
