--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -11,7 +11,7 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
     <!--[if lte IE 8]><script src="/forty-theme/assets/js/ie/html5shiv.js"></script><![endif]-->
-    <link rel="stylesheet" href="/forty-theme/assets/css/main.css" />
+    <link rel="stylesheet" href="./assets/css/main.css" />
     <!--[if lte IE 9]><link rel="stylesheet" href="/forty-theme/assets/css/ie9.css" /><![endif]-->
     <!--[if lte IE 8]><link rel="stylesheet" href="/forty-theme/assets/css/ie8.css" /><![endif]-->
 </head>
@@ -283,13 +283,13 @@
     </div>
 
     <!-- Scripts -->
-    <script src="/forty-theme/assets/js/jquery.min.js"></script>
-    <script src="/forty-theme/assets/js/jquery.scrolly.min.js"></script>
-    <script src="/forty-theme/assets/js/jquery.scrollex.min.js"></script>
-    <script src="/forty-theme/assets/js/skel.min.js"></script>
-    <script src="/forty-theme/assets/js/util.js"></script>
+    <script src="./assets/js/jquery.min.js"></script>
+    <script src="./assets/js/jquery.scrolly.min.js"></script>
+    <script src="./assets/js/jquery.scrollex.min.js"></script>
+    <script src="./assets/js/skel.min.js"></script>
+    <script src="./assets/js/util.js"></script>
     <!--[if lte IE 8]><script src="/forty-theme/assets/js/ie/respond.min.js"></script><![endif]-->
-    <script src="/forty-theme/assets/js/main.js"></script>
+    <script src="./assets/js/main.js"></script>
 
 
 </body>
