--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -83,7 +83,7 @@
         <section id="banner" class="major">
             <div class="inner">
                 <header class="major">
-                    <h1>Hi, my name is Forty</h1>
+                    <h1>Hi, We are Thy, Milon, and Pranav</h1>
                 </header>
                 <div class="content">
                     <p style="text-transform: uppercase;">A responsive site template designed by HTML5 Up<br /> and
